--- a/index.html
+++ b/index.html
@@ -223,6 +223,40 @@ chassis.</p>
   </div>
 
 
+  <!--bgbanner4-->
+  <div class="container-fluid bgbanner4">
+  </div>
+
+
+
+
+  <!--banner4-->
+  <div id="contact" class="container-fluid banner4">
+    <div class="container">
+      <h2>Contact</h2>
+
+      <div class="row">
+          <div class="col-md-6 designer">
+              <img src="./resources/images/d1.png">
+              <div class="designercontent">
+                <p>Ka-Wai Hung</p>
+                <p>UX/ Industrial Designer</p>
+                <p>NYC, US</p>
+              </div>
+          </div>
+          <div class="col-md-6 designer">
+              <img src="./resources/images/d1.png">
+              <div class="designercontent">
+                <p>Jing-Hung Liao</p>
+                <p>Automotive Designer</p>
+                <p>Taipei, Taiwan</p>
+              </div>
+          </div>
+
+
+      </div>
+    </div>
+  </div>
 
 
 
