--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
 </head>
 
@@ -23,7 +24,7 @@
         <p><a href="#concept" >Concept</a></p>
         <p><a href="#design">Design</a></p>
         <p><a href="#process">Process</a></p>
-        <p><a href="#">Contact</a></p>
+        <p><a href="#team">Team</a></p>
       </nav>
     </div>
   </div>
@@ -149,7 +150,7 @@ chassis.</p>
   <div id="process" class="container-fluid banner3">
     <div class="container">
       <h2>Process</h2>
-      <p>During this 8 month project, we have done sketches, 3Dmodel, 1:5 scale model, full scale model from scratch.</p>
+      <p>During this 8 month project, we have done sketches, 3Dmodel, 1:5 scale model, full scale model from scratch in May, 2012.</p>
       <div class="row">
 
         <div class="col-md-3 col-6 banner3box">
@@ -231,9 +232,9 @@ chassis.</p>
 
 
   <!--banner4-->
-  <div id="contact" class="container-fluid banner4">
+  <div id="team" class="container-fluid banner4">
     <div class="container">
-      <h2>Contact</h2>
+      <h2>Team</h2>
 
       <div class="row">
           <div class="col-md-6 designer">
@@ -242,22 +243,45 @@ chassis.</p>
                 <p>Ka-Wai Hung</p>
                 <p>UX/ Industrial Designer</p>
                 <p>NYC, US</p>
+                <a href="https://www.linkedin.com/in/ka-wai-hung-7202688a/"><i class="fab fa-linkedin-in fa-2x" ></i></a>
               </div>
           </div>
           <div class="col-md-6 designer">
-              <img src="./resources/images/d1.png">
+              <img src="./resources/images/d2.png">
               <div class="designercontent">
                 <p>Jing-Hung Liao</p>
                 <p>Automotive Designer</p>
                 <p>Taipei, Taiwan</p>
+                <a href="https://www.linkedin.com/in/liao-jing-hung-81234591/"><i class="fab fa-linkedin-in fa-2x" ></i></a>
               </div>
           </div>
-
-
       </div>
     </div>
   </div>
 
+  <!--bgbanner5-->
+  <div class="container-fluid bgbanner5">
+  </div>
+
+  <!--footer-->
+  <div id="contact" class="container-fluid footer">
+    <div class="container">
+
+
+      <div class="row">
+          <div class="col-md-12">
+
+              <div class="footercontent">
+
+                <p>Mobile: +1 917 515 4517</p>
+                <p>Email: kawaihung89@gmail.com</p>
+                <p>© 2018 Ka-Wai Hung. All rights reserved.</p>
+              </div>
+
+          </div>
+      </div>
+    </div>
+  </div>
 
 
 <!--bootstrap--->
