--- a/index.html
+++ b/index.html
@@ -243,16 +243,22 @@ chassis.</p>
                 <p>Ka-Wai Hung</p>
                 <p>UX/ Industrial Designer</p>
                 <p>NYC, US</p>
-                <a href="https://www.linkedin.com/in/ka-wai-hung-7202688a/"><i class="fab fa-linkedin-in fa-2x" ></i></a>
+                <div class="icons">
+                <a href="https://www.linkedin.com/in/ka-wai-hung-7202688a/" target="_blank"><i class="fab fa-linkedin-in fa-2x" ></i></a>
+                  <a href="https://www.instagram.com/kawai_hung/" target="_blank"><i class="fab fa-instagram fa-2x" ></i></a>
+              </div>
               </div>
           </div>
           <div class="col-md-6 designer">
               <img src="./resources/images/d2.png">
               <div class="designercontent">
                 <p>Jing-Hung Liao</p>
-                <p>Automotive Designer</p>
+                <p>Transportation Designer</p>
                 <p>Taipei, Taiwan</p>
-                <a href="https://www.linkedin.com/in/liao-jing-hung-81234591/"><i class="fab fa-linkedin-in fa-2x" ></i></a>
+                <div class="icons">
+                <a href="https://www.linkedin.com/in/liao-jing-hung-81234591/" target="_blank"><i class="fab fa-linkedin-in fa-2x" ></i></a>
+                  <a href="https://www.instagram.com/jinghung_liao/" target="_blank"><i class="fab fa-instagram fa-2x" ></i></a>
+              </div>
               </div>
           </div>
       </div>
