--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <!--bgbanner1-->
 
-  <div class="container-fluid bgbanner1 ">
+  <div class="container-fluid bgbanner1 " data-parallax="scroll" data-image-src="./resources/images/new.jpg" data-speed="0">
 
   </div>
 <!--title-->
@@ -76,7 +76,7 @@
 </div>
 
   <!--bgbanner2-->
-  <div class="container-fluid bgbanner2">
+  <div class="container-fluid bgbanner2"  data-parallax="scroll" data-image-src="./resources/images/sketch.jpg" data-speed="0">
 
   </div>
 
@@ -143,7 +143,7 @@ chassis.</p>
   </div>
 
   <!--bgbanner3-->
-  <div class="container-fluid bgbanner3">
+  <div class="container-fluid bgbanner3" data-parallax="scroll" data-image-src="./resources/images/back.jpg" data-speed="0">
   </div>
 
   <!--banner3-->
@@ -328,9 +328,9 @@ function togglePop4() {
 pics4.forEach(pic => pic.addEventListener('click', togglePop4));
 
 
-
-
 </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="./resources/js/parallax.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
