--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container-fluid header">
     <div class=" headerContainer" >
       <div class="logo">
-      <img src="./resources/images/logo2.png" /> <p>   | Snowmobile Design</p>
+      <img src="./resources/images/logo2.png" /> <p class="nomobile">   | Snowmobile Design</p>
     </div>
       <nav>
         <p><a href="#concept" >Concept</a></p>
