--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ chassis.</p>
 
 
   <!--bgbanner4-->
-  <div class="container-fluid bgbanner4">
+  <div class="container-fluid bgbanner4"  data-parallax="scroll" data-image-src="./resources/images/front.jpg" data-speed="0">
   </div>
 
 
@@ -266,7 +266,7 @@ chassis.</p>
   </div>
 
   <!--bgbanner5-->
-  <div class="container-fluid bgbanner5">
+  <div class="container-fluid bgbanner5"  data-parallax="scroll" data-image-src="./resources/images/p17.jpg" data-speed="0">
   </div>
 
   <!--footer-->
