--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ chassis.</p>
   <div id="process" class="container-fluid banner3">
     <div class="container">
       <h2>Process</h2>
-      <p>During this 8 month project, we have done sketches, 3Dmodel, 1:5 scale model, full scale model from scratch in May, 2012.</p>
+      <p>During this 8 month project, we have done sketches, 3Dmodel, 1:5 scale model, full scale model from scratch in 2012.</p>
       <div class="row">
 
         <div class="col-md-3 col-6 banner3box">
