--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!--bgbanner1-->
 
   <div class="container-fluid bgbanner1 " data-parallax="scroll" data-image-src="./resources/images/new.jpg" data-speed="0">
-  
+
   </div>
 <!--title-->
 <div id="concept"  class="container-fluid title">
@@ -115,7 +115,7 @@ chassis.</p>
           </div>
           <div class="banner2Content">
             <h3>Suspension Design</h3>
-            <p>We’ve taken into consideration envi- ronmental terrain and conditions un- like flat roads, so in addition to du- al-fork shock absorbers and a central rear shock for the body, the front skid has also been given shock absorb- ers which have been applied to the frame for maximum maneuverability.</p>
+            <p>We’ve taken into consideration environmental terrain and conditions unlike flat roads, so in addition to dual-fork shock absorbers and a central rear shock for the body, the front skid has also been given shock absorb- ers which have been applied to the frame for maximum maneuverability.</p>
           </div>
         </div>
 
