--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2>Concept</h2>
         <p>Dirus combines the benefit of ATV, dirt bike and snowmobile into one. </P>
 
-<p>Combined with the current trend of extreme sports in this area has also developed a different competition venues as well as equipment, a growing number of young love and the pursuit of thrills for fun, brilliant appearance, lightweight structure, high eletric output power, to allow users to easily meet the demand.</p>
+<p>Combined with the current trend of extreme sports in this area and developed a different competition venues. Growing number of players pursuit  thrills for fun. Dirus has brilliant appearance, lightweight structure and high eletric output power to allow the user to easily meet the demand.</p>
       </div>
   </div>
 </div>
@@ -115,7 +115,7 @@ chassis.</p>
           </div>
           <div class="banner2Content">
             <h3>Suspension Design</h3>
-            <p>We’ve taken into consideration environmental terrain and conditions unlike flat roads, so in addition to dual-fork shock absorbers and a central rear shock for the body, the front skid has also been given shock absorb- ers which have been applied to the frame for maximum maneuverability.</p>
+            <p>We’ve taken into consideration environmental terrain and conditions unlike flat roads, so in addition to dual-fork shock absorbers and a central rear shock for the body, the front skid has also been given shock absorbers which have been applied to the frame for maximum maneuverability.</p>
           </div>
         </div>
 
