--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       </div>
       <div class="col-md-8 banner1Content">
         <h2>Concept</h2>
-        <p>Dirus combines the benefit of ATV, dirt bike and snowmobile into one. </P>
+        <p>Dirus has the benefit of ATV, dirt bike and snowmobile into one. </P>
 
-<p>Combined with the current trend of extreme sports in this area and developed a different competition venues. Growing number of players pursuit  thrills for fun. Dirus has brilliant appearance, lightweight structure and high eletric output power to allow the user to easily meet the demand.</p>
+<p>Combined with the current trend of extreme sports and different competition venues for those active players pursuit thrills for fun. Dirus has brilliant appearance, lightweight structure and high eletric output power to allow the user to easily meet the demand.</p>
       </div>
   </div>
 </div>
