--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-md-4 banner1Content">
           <h2>"Dirus"</h2>
-          <p>Canis dirus whichever suffix Dirus is the scientific name for fear of the wolf in all over the vast ice age, his body structure and modern wolf is completely different, more solid and great body, strong jaw, can easily chew bones.</p>
+          <p>Canis dirus, "fearsome dog", is one of the most famous prehistoric carnivores in North America in ice age. It was about 25% heavier than the modern gray wolf with larger teeth, greater shearing ability and strongest bite force aof any known Canis species.</p>
         </div>
     </div>
   </div>
