--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="col-md-4 banner1Content">
           <h2>"Dirus"</h2>
-          <p>Canis dirus, "fearsome dog", is one of the most famous prehistoric carnivores in North America in ice age. It was about 25% heavier than the modern gray wolf with larger teeth, greater shearing ability and strongest bite force aof any known Canis species.</p>
+          <p>Canis dirus, "fearsome dog", is one of the most famous prehistoric carnivores in North America in ice age. It was about 25% heavier than the modern gray wolf with larger teeth, greater shearing ability and strongest bite force of any known Canis species.</p>
         </div>
     </div>
   </div>
