--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div id="concept"  class="container-fluid title">
   <div class="container">
         <h1>Dirus: Snowmobile Design</h1>
-        <p>The ultimate lightweight eletric single-sled snowmobile design.</p>
+        <p>The ultimate lightweight eletric single-ski snowmobile design.</p>
 
 </div>
 </div>
@@ -94,7 +94,7 @@
           </div>
           <div class="banner2Content">
             <h3>Flexibility</h3>
-            <p>A modular system has been implemented which allows the user to change the front skid to a wheel for use on other terrain or weather conditions.</p>
+            <p>A modular system has been implemented which allows the user to change the front ski to a wheel for use on other terrain or weather conditions.</p>
           </div>
         </div>
 
