--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <div id="concept"  class="container-fluid title">
   <div class="container">
         <h1>Dirus: Snowmobile Design</h1>
-        <p>The ultimate lightweight eletric single-ski snowmobile design.</p>
+        <p>The ultimate lightweight electric single-ski snowmobile design.</p>
 
 </div>
 </div>
@@ -71,7 +71,7 @@
         <h2>Concept</h2>
         <p>Dirus has the benefit of ATV, dirt bike and snowmobile into one. </P>
 
-<p>Combined with the current trend of extreme sports and different competition venues for those active players pursuit thrills for fun. Dirus has brilliant appearance, lightweight structure and high eletric output power to allow the user to easily meet the demand.</p>
+<p>Combined with the current trend of extreme sports and different competition venues for those active players pursuit thrills for fun. Dirus has brilliant appearance, lightweight structure and high electric output power to allow the user to easily meet the demand.</p>
       </div>
   </div>
 </div>
@@ -152,7 +152,7 @@ chassis.</p>
   <div id="process" class="container-fluid banner3">
     <div class="container">
       <h2>Process</h2>
-      <p>During this 8 month project, we have done sketches, 3Dmodel, 1:5 scale model, full scale model from scratch in 2012.</p>
+      <p>During this 8 month project, we have done sketches, 3D model, 1:5 scale model, full scale model from scratch in 2012.</p>
       <div class="row">
 
         <div class="col-md-3 col-6 banner3box">
