--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ chassis.</p>
                 <div class="icons">
                 <a href="https://www.linkedin.com/in/ka-wai-hung-7202688a/" target="_blank"><i class="fab fa-linkedin-in fa-2x" ></i></a>
 
-                    <a href="https://kawaihung.com" target="_blank"><i class="fas fa-user-circle fa-2x" ></i></a>
+              <!--      <a href="https://kawaihung.com" target="_blank"><i class="fas fa-user-circle fa-2x" ></i></a>-->
               </div>
               </div>
           </div>
